@@ -224,3 +224,5 @@
 #define ERR_NETWORK             "Network error"
 #define ERR_XPM_IMAGE           "Invalid xpm image"
 #define ERR_FILE_NOT_OPEN       "IOError: File not open for reading"
+#define ERR_DIRWALK_NAME        "DIRWALK: name %s/%s too long"
+#define ERR_DIRWALK_MISSING_USE "DIRWALK: missing USE statement"
